--- a/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/Screens/AddTab.xaml
+++ b/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/Screens/AddTab.xaml
@@ -6,20 +6,20 @@
         xmlns:local="clr-namespace:CPSC_481_Horizontal_Prototype"
         mc:Ignorable="d"
 
-        Title="AddTab" Height="250" Width="600" WindowStyle="None" ResizeMode="NoResize" Topmost="True" WindowStartupLocation="CenterScreen">
+        Title="AddTab" Height="450" Width="800" WindowStyle="None" ResizeMode="NoResize" Topmost="True" WindowStartupLocation="CenterScreen">
     <Grid Background="#FF213F57">
-        <WrapPanel x:Name="input_name" DockPanel.Dock="Top" VerticalAlignment="Center" HorizontalAlignment="Stretch" Margin="10,0">
-            <Label x:Name="lbl_name"  Content="Name:&#xA;" HorizontalAlignment="Left" VerticalAlignment="Center" Width="75" Height="40" FontSize="21.333" Foreground="#FFE2E5E9"/>
-            <TextBox x:Name="txtbox_name" HorizontalAlignment="Right" Height="48" TextWrapping="Wrap" VerticalAlignment="Center" Width="500" TextChanged="textBox_TextChanged" FontSize="32" Background="#FFE6E5E8" BorderBrush="{x:Null}"/>
+        <WrapPanel x:Name="input_name" DockPanel.Dock="Top" VerticalAlignment="Center" HorizontalAlignment="Stretch" Width="700"  Margin="10,0">
+            <Label x:Name="lbl_name"  Content="Name:&#xA;" HorizontalAlignment="Left" VerticalAlignment="Center" VerticalContentAlignment="Center" Width="170" Height="100" FontSize="48" Foreground="#FFE2E5E9" FontFamily="Segoe UI Light"/>
+            <TextBox x:Name="txtbox_name" HorizontalAlignment="Right" Height="100" TextWrapping="Wrap" VerticalAlignment="Center" Width="525" TextChanged="textBox_TextChanged" FontSize="64" Background="#FFE6E5E8" BorderBrush="{x:Null}"/>
         </WrapPanel>
 
-        <Grid DockPanel.Dock="Bottom" VerticalAlignment="Bottom" Height="53">
-            <Button x:Name="btn_cancel" Content="Cancel" HorizontalAlignment="Left" VerticalAlignment="Bottom" Height="48"  Width="300" Click="btn_cancel_Click"  Background="{x:Null}" Foreground="#FFEE516C" BorderBrush="{x:Null}" FontSize="18.667" RenderTransformOrigin="0.046,1.474"/>
-            <Button x:Name="btn_submit" Content="Submit" HorizontalAlignment="Right" VerticalAlignment="Bottom" Height="48"  Width="300" Background="{x:Null}" Foreground="#FF00BB97" BorderBrush="{x:Null}" FontSize="18.667" Click="btn_submit_Click"/>
+        <Grid DockPanel.Dock="Bottom" VerticalAlignment="Bottom" Height="100">
+            <Button x:Name="btn_cancel" Content="Cancel" HorizontalAlignment="Left" VerticalAlignment="Bottom" Height="100"  Width="400" Click="btn_cancel_Click"  Background="{x:Null}" Foreground="#FFEE516C" BorderBrush="{x:Null}" FontSize="26.667" RenderTransformOrigin="0.046,1.474"/>
+            <Button x:Name="btn_submit" Content="Submit" HorizontalAlignment="Right" VerticalAlignment="Bottom" Height="100"  Width="400" Background="{x:Null}" Foreground="#FF00BB97" BorderBrush="{x:Null}" FontSize="26.667" Click="btn_submit_Click"/>
         </Grid>
-        <Label x:Name="lbl_title" Content="New Tab" HorizontalAlignment="Stretch"  HorizontalContentAlignment="Center" VerticalAlignment="Top" FontSize="28" Foreground="White" FontFamily="Segoe UI Light" Background="{x:Null}"/>
-        <Separator HorizontalAlignment="Stretch" Height="100" Margin="0,152,0,-2" VerticalAlignment="Top" Background="#FF344D61"/>
-        <Separator HorizontalAlignment="Center" Height="100"  VerticalAlignment="Bottom" Width="48" RenderTransformOrigin="0.5,0.5" Background="#FF344D61" Margin="276,0,276,-26">
+        <Label x:Name="lbl_title" Content="New Tab" HorizontalAlignment="Stretch"  HorizontalContentAlignment="Center" VerticalAlignment="Top" FontSize="64" Foreground="White" FontFamily="Segoe UI Light" Background="{x:Null}"/>
+        <Separator HorizontalAlignment="Stretch" Height="100" Margin="0,300,0,0" VerticalAlignment="Top" Background="#FF344D61"/>
+        <Separator HorizontalAlignment="Center" Height="100"  VerticalAlignment="Bottom" Width="100" RenderTransformOrigin="0.5,0.5" Background="#FF344D61" Margin="276,0,276,0">
             <Separator.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
