--- a/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/App.xaml
+++ b/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:CPSC_481_Horizontal_Prototype"
-             StartupUri="Screens/HomeScreen.xaml">
+             StartupUri="Screens/MainScreen.xaml">
     <Application.Resources>
          
     </Application.Resources>
