--- a/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/Screens/ExamineItemScreen.xaml
+++ b/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/Screens/ExamineItemScreen.xaml
@@ -9,12 +9,12 @@
 
     <Viewbox Stretch="Fill" >
     <Grid >
-        <Border BorderThickness="2,2,2,2" BorderBrush="#FFF4F4F4" >
+        <Border BorderThickness="5" BorderBrush="#FFF4F4F4" >
             <Image x:Name="image" HorizontalAlignment="Left" Height="135" VerticalAlignment="Top" Width="135" 
                 Margin="10,61,0,0" Source="/Resources/Images/beer.png"/>
         </Border>
         <Label x:Name="lbl_quantity" Height="30" Content="Quantity:" HorizontalAlignment="Left" Margin="298,216,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="14"/>
-        <TextBox x:Name="tb_numItems" HorizontalAlignment="Left" Height="30" Margin="388,216,0,0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" TextWrapping="Wrap" Text="1" VerticalAlignment="Top" Width="37" TextChanged="textBox_TextChanged" FontSize="21.333"/>
+        <TextBlock x:Name="tb_numItems" HorizontalAlignment="Left" Height="30" Margin="388,216,0,0" TextWrapping="Wrap" Text="1" VerticalAlignment="Top" Width="37" FontSize="21.333" TextAlignment="Center"/>
         <Button x:Name="btn_decrease" Content="&#xE012;" HorizontalAlignment="Left" Margin="360,216,0,0" VerticalAlignment="Top" Width="25" Height="30" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontFamily="Segoe UI Symbol" FontSize="18.667" Background="{x:Null}" BorderBrush="{x:Null}" Click="btn_decrease_Click"/>
         <Button x:Name="btn_increase" Content="&#xE013;" HorizontalAlignment="Left" Margin="429,216,0,0" VerticalAlignment="Top" Width="25" Height="30" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontFamily="Segoe UI Symbol" FontSize="18.667" BorderBrush="{x:Null}" Background="{x:Null}" Click="btn_increase_Click"/>
         <Button x:Name="btn_addToTray" Content="Add to tray" HorizontalAlignment="Left" Margin="301,252,0,0" VerticalAlignment="Top" Width="153" Height="30"  HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Click="btn_addToTray_Click" Background="#FF00BB97" Foreground="White" FontFamily="Segoe UI Light" FontSize="14"/>
