--- a/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/Screens/MainScreen.xaml
+++ b/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/Screens/MainScreen.xaml
@@ -10,11 +10,13 @@
     <Grid>
         <StackPanel x:Name="tabPanel" HorizontalAlignment="Left"  VerticalAlignment="Stretch" Width="75" Background="#FF122331">
             <Image x:Name="logo" Height="75" Width="75" Source="/Resources/Images/logo_sml.png"/>
-            <Button x:Name="btn_personTab" BorderThickness="0,0,0,0"  Width="75"  Height="75" Content="W" BorderBrush="{x:Null}" Foreground="White" FontFamily="Segoe UI Semibold" FontSize="48" Click="btn_changeTab_Click" Background="#FF288da7"/>
+            <!--<Button x:Name="btn_personTab" BorderThickness="0,0,0,0"  Width="75"  Height="75" Content="W" BorderBrush="{x:Null}" Foreground="White" FontFamily="Segoe UI Semibold" FontSize="48" Click="btn_changeTab_Click" Background="#FF288da7"/>
             <Button x:Name="btn_personTab_2" BorderThickness="0,0,0,0"  Width="75"  Height="75" Content="S" BorderBrush="{x:Null}" Foreground="White" FontFamily="Segoe UI Semibold" FontSize="48" Click="btn_changeTab_Click" Background="#FFf2ab57"/>
+           --> 
             <Button x:Name="btn_addTab" Width="75" BorderThickness="0,0,0,0"  Height="75" VerticalContentAlignment="Center" Content="+" BorderBrush="{x:Null}" Foreground="White" FontFamily="Segoe UI Semibold" FontSize="48" Click="btn_addTab_Click" Background="#FF00b694" RenderTransformOrigin="0.547,0.727"/>
+
         </StackPanel>
-        <Grid x:Name="main" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="75,0,0,0" Background="#FFF4F4F4">
+            <Grid x:Name="main" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="75,0,0,0" Background="#FFF4F4F4">
             <local:Page_Holder x:Name="Page_Holder" VerticalAlignment="Top" Margin="10,10,10,118" HorizontalAlignment="Center" />
             <Rectangle Fill="#FF213F57" HorizontalAlignment="Stretch" Height="108" VerticalAlignment="Bottom" StrokeThickness="0" Margin="10,0,311,0" RadiusX="3" RadiusY="3" />
 
