--- a/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/Screens/AddTab.xaml
+++ b/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/Screens/AddTab.xaml
@@ -18,13 +18,13 @@
             <Button x:Name="btn_submit" Content="Submit" HorizontalAlignment="Right" VerticalAlignment="Bottom" Height="100"  Width="400" Background="{x:Null}" Foreground="#FF00BB97" BorderBrush="{x:Null}" FontSize="26.667" Click="btn_submit_Click"/>
         </Grid>
         <Label x:Name="lbl_title" Content="New Tab" HorizontalAlignment="Stretch"  HorizontalContentAlignment="Center" VerticalAlignment="Top" FontSize="64" Foreground="White" FontFamily="Segoe UI Light" Background="{x:Null}"/>
-        <Separator HorizontalAlignment="Stretch" Height="100" Margin="0,300,0,0" VerticalAlignment="Top" Background="#FF344D61"/>
-        <Separator HorizontalAlignment="Center" Height="100"  VerticalAlignment="Bottom" Width="100" RenderTransformOrigin="0.5,0.5" Background="#FF344D61" Margin="276,0,276,0">
+        <Separator HorizontalAlignment="Stretch" Height="1" Margin="0,0,0,100" VerticalAlignment="Bottom" Background="#FF344D61"/>
+        <Separator HorizontalAlignment="Center" Height="1" VerticalAlignment="Bottom" Width="100" Background="#FF344D61" Margin="400,0,300,0">
             <Separator.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
                     <SkewTransform/>
-                    <RotateTransform Angle="90"/>
+                    <RotateTransform Angle="-90"/>
                     <TranslateTransform/>
                 </TransformGroup>
             </Separator.RenderTransform>
